--- a/plugins/phonegap-plugin-push/package.json
+++ b/plugins/phonegap-plugin-push/package.json
@@ -42,5 +42,13 @@
     },
     "devDependencies": {
         "jasmine-node": "1.14.5"
+    },
+    "cordovaPlugins": [
+    {
+      "variables": {
+        "SENDER_ID": "202371380195"
+      },
+      "locator": "phonegap-plugin-push"
     }
+  ]
 }
